Cleaned up all compiler warnings